--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "anipfp",
   "name": "AniPFP",
-  "description": "Animated profile pictures without Nitro + rainbow spin",
+  "description": "Animated profile pictures + rainbow spinning border without Nitro 🔥",
   "version": "1.0.0",
-  "author": "YourNameHere",
+  "author": "Nas9229alt",
   "entrypoint": "index.js"
 }
